[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiki-mos-audit"
version = "0.3"
description = "First-pass MOS auditor for Wikipedia articles"
requires-python = ">=3.12"
dependencies = ["mwparserfromhell"]

[project.optional-dependencies]
ast = ["mwparserfromhell"]
dev = ["pytest>=8.0", "pytest-cov", "ruff"]

[project.scripts]
wiki-mos-audit = "wiki_mos_audit.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=wiki_mos_audit --cov-report=term-missing"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B"]
ignore = ["S310"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S603"]
